--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-       <link rel="stylesheet" href="index.css">
+       <link rel="stylesheet" href="style.css">
        <script src="app.js" ></script>
          <style>
               img {
